# ieee754

./: CMakeLists.txt  Ieee754.cpp  Ieee754.hpp  README.md  ieee754.glade  index.html  main.cpp  params.json
src/: Ieee754.cpp  Ieee754.hpp
